Edited MA 1, added classes to .md footers.

--- a/02_madhyama/01_First/01_Sevens/MA_001.md
+++ b/02_madhyama/01_First/01_Sevens/MA_001.md
@@ -11,13 +11,16 @@ next: MA_002.html
 ## [Chapter 1: Sevens](index.html)
 ### 1. The Good Dharma
 
-Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+{: #p1}
 
-It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he will attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? Namely, a monk knows the Dharma, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
+2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he will attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? Namely, a monk knows the Dharma, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
+{: #p2}
 
 #### Knowing the Dharma
 
-“How does a monk know the Dharma? It means a monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.  This is called a monk who knows the Dharma.
+3\. “How does a monk know the Dharma? It means a monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.  This is called a monk who knows the Dharma.
+{: #p3}
 
 “Suppose there is a monk who doesn’t know the Dharma, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} Such a monk doesn’t know the Dharma.
 
@@ -25,7 +28,8 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 #### Knowing the Meaning
 
-“How does a monk know the meaning? It means a monk knows the meaning of this or that expression is this or that meaning. This is called a monk who knows the meaning.
+4\. “How does a monk know the meaning? It means a monk knows the meaning of this or that expression is this or that meaning. This is called a monk who knows the meaning.
+{: #p4}
 
 “Suppose there is a monk who doesn’t know the meaning, which is to say that he doesn’t know the meaning of this or that expression is this or that meaning. Such a monk doesn’t know the meaning.
 
@@ -33,15 +37,17 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 #### Knowing the Time
 
-“How does a monk know the time? It means a monk knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
+5\. “How does a monk know the time? It means a monk knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
+{: #p5}
 
-“Suppose there is a monk who doesn’t know the time, which is to say that he doesn’t know the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
+“Suppose there is a monk who doesn’t know the time, which is to say that he doesn’t know the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
 
-“Suppose there is a monk who well knows the time, which is to say that he knows the time to cultivate lower appearances, the time to cultivate higher appearances, and the time to cultivate indifferent appearances. This is called the monk who well knows the time.
+“Suppose there is a monk who well knows the time, which is to say that he knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. This is called the monk who well knows the time.
 
 #### Knowing Moderation
 
-“How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
+6\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
+{: #p6}
 
 “Suppose there is a monk who doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, laying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
 
@@ -49,58 +55,71 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 #### Knowing Oneself
 
-“How does a monk know himself? It means a monk knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who knows himself.
+7\. “How does a monk know himself? It means a monk knows ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.
+{: #p7}
 
-“Suppose there is a monk who doesn’t know himself, which is to say that he doesn’t know ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ Such a monk doesn’t know himself.
+“Suppose there is a monk who doesn’t know himself, which is to say that he doesn’t know ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.
 
-“Suppose a monk well knows himself, which is to say that he knows ‘Such are my belief, discipline, learning, generosity, wisdom, discernment, Āgamas, and attainments.’ This is called a monk who well knows himself.
+“Suppose a monk well knows himself, which is to say that he knows ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who well knows himself.
 
 #### Knowing the Assembly
 
-“How does a monk know the assembly? It means a monk knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
+8\. “How does a monk know the assembly? It means a monk knows ‘This is an warrior assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
+{: #p8}
+“Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an warrior assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
 
-“Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
-
-“Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an aristocratic assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
+“Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an warrior assembly, this is a brahmin assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
 
 #### Knowing the Superiority of People
 
-“How does a monk know the superiority of people? It means a monk knows there are two kinds of people: believers and non-believers. If someone is a believer, he is superior; a non-believer is not.
+9\. “How does a monk know the superiority of people? It means a monk knows there are two kinds of people: believers and non-believers. If someone is a believer, he is superior; a non-believer is not.
+{: #p9}
 
-“It also means that there are two kinds of believers: those who frequently go to see the monks and those who don’t frequently go to see the monks. If someone frequently goes to see the monks, he is superior; someone who doesn’t frequently go to see the monks is not.
+10\. “It also means that there are two kinds of believers: those who frequently go to see the monks and those who don’t frequently go to see the monks. If someone frequently goes to see the monks, he is superior; someone who doesn’t frequently go to see the monks is not.
+{: #p10}
 
-“It also means that there are two kinds of people who frequently go to see the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, he is superior; someone who doesn’t revere the monks is not.
+11\. “It also means that there are two kinds of people who frequently go to see the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, he is superior; someone who doesn’t revere the monks is not.
+{: #p11}
 
-“It also means that there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, he is superior; someone who doesn’t ask about the sūtras is not.
+12\. “It also means that there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, he is superior; someone who doesn’t ask about the sūtras is not.
+{: #p12}
 
-“It also means that there are two kinds of people who ask about the sūtras: those who single-mindedly listen to the sūtras and those who don’t single-mindedly listen to the sūtras. If someone single-mindedly listens to the sūtras, he is superior; someone who doesn’t single-mindedly listen to the sūtras is not.
+13\. “It also means that there are two kinds of people who ask about the sūtras: those who single-mindedly listen to the sūtras and those who don’t single-mindedly listen to the sūtras. If someone single-mindedly listens to the sūtras, he is superior; someone who doesn’t single-mindedly listen to the sūtras is not.
+{: #p13}
 
-“It also means that there are two kinds of people who single-mindedly listen to the sūtras: those who hear and retain the Dharma and those who hear but don’t retain the Dharma. If someone hears and retains the Dharma, he is superior; someone who hears but doesn’t retain the Dharma is not.
+14\. “It also means that there are two kinds of people who single-mindedly listen to the sūtras: those who hear and retain the Dharma and those who hear but don’t retain the Dharma. If someone hears and retains the Dharma, he is superior; someone who hears but doesn’t retain the Dharma is not.
+{: #p14}
 
-“It also means that there are two kinds of people who hear and retain the Dharma: those who hear the Dharma and contemplate its meaning and those who hear the Dharma but don’t contemplate its meaning. If someone hears the Dharma and contemplates its meaning, he is superior; someone who hears the Dharma but doesn’t contemplate its meaning is not.
+15\. “It also means that there are two kinds of people who hear and retain the Dharma: those who hear the Dharma and contemplate its meaning and those who hear the Dharma but don’t contemplate its meaning. If someone hears the Dharma and contemplates its meaning, he is superior; someone who hears the Dharma but doesn’t contemplate its meaning is not.
+{: #p15}
 
-“It also means that there are two kinds of people who hear the Dharma and contemplate its meaning: those who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma and those who don’t know the Dharma, don’t know its meaning, don’t go from one teaching to the next teaching, don’t conform to the Dharma, and don’t conduct themselves according to the Dharma. If someone knows the Dharma, knows its meaning, goes from one teaching to the next teaching, conforms to the Dharma, and conducts himself according to the Dharma, he is superior. Someone who doesn’t know the Dharma, doesn’t know its meaning, doesn’t go from one teaching to the next teaching, doesn’t conform to the Dharma, and doesn’t conduct himself according to the Dharma is not.
+16\. “It also means that there are two kinds of people who hear the Dharma and contemplate its meaning: those who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma and those who don’t know the Dharma, don’t know its meaning, don’t go from one teaching to the next teaching, don’t conform to the Dharma, and don’t conduct themselves according to the Dharma. If someone knows the Dharma, knows its meaning, goes from one teaching to the next teaching, conforms to the Dharma, and conducts himself according to the Dharma, he is superior. Someone who doesn’t know the Dharma, doesn’t know its meaning, doesn’t go from one teaching to the next teaching, doesn’t conform to the Dharma, and doesn’t conduct himself according to the Dharma is not.
+{: #p16}
 
-“It also means that there are two kinds of people who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma: those who benefit themselves, benefit others, benefit many people, pity the world, [422a] seek both meaning and benefit for gods and humans, and seek peace and happiness and those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. He is great, higher, exceptional, superior, honored, and wondrous.
+17\. “It also means that there are two kinds of people who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma: those who benefit themselves, benefit others, benefit many people, pity the world, [422a] seek both meaning and benefit for gods and humans, and seek peace and happiness and those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. He is great, higher, exceptional, superior, honored, and marvelous.
+{: #p17}
 
 #### Conclusion
 
-“It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and wondrous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, he is the best, great, higher, exceptional, superior, honored, and wondrous. This is called a monk who knows the superiority of people.”
+18\. “It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, he is the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
+{: #p18}
 
-The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+19\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+{: #p19}
 
 ### Notes
 
 1. {:#n1} Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#ref1)
 2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
-3. {:#n3} This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s translation of the **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
+3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the **Saṃgītiparyāya Abhidharma** (T1536.437b24-26) reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
 4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} *Aristocratic … brahmin … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
+5. {:#n5} *Warrior … brahmin … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
 
 ---
 
 Translator: Charles Patton
-
-Last Revised: 20 February 2019
+{: .translator}
+Last Revised: 1 April 2019
+{: .revised}
 
 ---
