--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -66,7 +66,8 @@ The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 21 February 2020
+{: .revised}
 
 ---
