--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -102,7 +102,8 @@ The Buddha spoke thus. The monks who heard what the Buddha had taught rejoiced a
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 24 February 2020
+{: .revised}
 
 ---
