--- a/02_madhyama/01_First/01_Sevens/MA_006.md
+++ b/02_madhyama/01_First/01_Sevens/MA_006.md
@@ -56,7 +56,8 @@ The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 18 February 2020
+{: .revised}
 
 ---
