--- a/02_madhyama/01_First/01_Sevens/MA_007.md
+++ b/02_madhyama/01_First/01_Sevens/MA_007.md
@@ -68,7 +68,8 @@ The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 18 February 2020
+{: .revised}
 
 ---
