--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
@@ -21,6 +21,8 @@ next: MA_073.html
   Only tolerance can end disputes;  
   This is a law that’s venerable.
 
+#### The Legend of King Dīrghāyu
+
 3\. “Why is that? Once in the past, there was a king of Kośala named Dīrghāyu. There was also a king of Kāsi named Brahmadatta. Those two kings were constantly at war with each other.
 {: #p3}
 
@@ -218,7 +220,7 @@ next: MA_073.html
 65\. “Thereupon, King Brahmadatta used the royal bath to bathe Prince Dīrghajāti, anointed him with royal incense, and dressed him in royal clothes. He directed that he ride on a golden chariot seat and returned him to his former kingdom with his [father’s] wife.
 {: #p65}
 
-### The Kauśāmbī Monks
+#### The Kauśāmbī Monks
 
 66\. “Monks, those kings were aristocratic kings born from the crown and the lords of great kingdoms. Ruling the world under heaven, their own actions were tolerant, and they praised tolerance. Their own actions were kind, and they praised kindness. Their own actions were merciful, and they praised mercy.
 {: #p66}
@@ -277,7 +279,7 @@ next: MA_073.html
   Should live alone with resolve;  
   Don’t accompany bad associates.”
 
-### Visiting Venerable Bhagu
+#### Visiting Venerable Bhagu
 
 70\. After speaking these verses, the Bhagavān then used his supernormal powers to levitate away. He went to the village of [Bālakaloṇakāra], and the Venerable Bhagu of the Śākya clan was there in [Bālakaloṇakāra].  He didn’t sleep day and night, diligently practicing the path. He was resolved to practice continuous concentration and abided in the factors of the path. Seeing the Buddha coming from afar, that venerable of the Śākya clan went to meet him after seeing him. He took the Buddha’s robe and bowl, prepared a seat for the Buddha, and fetched water for washing his feet. After washing his feet, the Buddha sat on the Venerable Śākyan Bhagu’s seat. After sitting, he asked, “Monk Bhagu, have you been doing well? Do you need anything?”
 {: #p70}
@@ -292,7 +294,7 @@ Venerable Bhagu said, “Bhagavān, I don’t sleep day and night, diligently pr
 72\. The Bhagavān thought, “This clansman wanders in contentment. Now, I’d like to teach Dharma for him.” After thinking this, he then taught the Dharma [536a] for Venerable Bhagu. He encouraged, roused, and made him rejoice, teaching the Dharma for him with measureless methods.
 {: #p72}
 
-### The Solitary Elephant
+#### The Solitary Elephant
 
 73\. After encouraging, rousing, and making him rejoice, [the Bhagavān] rose from his seat and went to a protected temple grove. Entering that protected temple grove, he went to a tree, spread out his sitting mat under it, and sat down cross-legged.
 {: #p73}
@@ -318,7 +320,7 @@ Venerable Bhagu said, “Bhagavān, I don’t sleep day and night, diligently pr
 78\. The Bhagavān then gathered up his robe and bowl from the protected temple grove and went to the [Pācīnavaṃsa] temple grove.
 {: #p78}
 
-### Visiting Aniruddha, Nandika, and Kimbila
+#### Visiting Aniruddha, Nandika, and Kimbila
 
 79\. At the time, the [Pācīnavaṃsa] temple grove had three clansmen living in it: Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila. Those venerables there were practicing thus: If they solicited food, the one who returned first then prepared seats, and he fetched the water and foot-washing basin. He calmly washed his feet and wiped down his legs with a cloth. He then rinsed out the water jug. If he could eat all the food he solicited, then he ate it all. If some was leftover, he put it in a covered container and set it up high. When the meal was finished, he collected his bowl, washed his hands and feet, and put his sitting mat over his shoulder. He then entered his dwelling to sit quietly.
 {: #p79}
@@ -384,7 +386,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 98\. “Aniruddha, when I hadn’t yet awakened to the unsurpassed and true enlightenment, I also apprehended light and saw forms, and that vision of forms and light would soon disappear again.
 {: #p98}
 
-#### 1. Doubt
+##### 1. Doubt
 
 99\. “Aniruddha, I had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p99}
@@ -398,7 +400,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 102\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise.’ Aniruddha, wanting to not produce this disturbance, I lived alone far away from it, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from it, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p102}
 
-#### 2. Unmindfulness
+##### 2. Unmindfulness
 
 103\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p103}
@@ -409,7 +411,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 105\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise and the disturbance of unmindfulness doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p105}
 
-#### 3. Perceiving Physical Illness
+##### 3. Perceiving Physical Illness
 
 106\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p106}
@@ -420,7 +422,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 108\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, and the disturbance of perceiving physical illness doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p108}
 
-#### 4. Drowsiness
+##### 4. Drowsiness
 
 109\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p109}
@@ -431,7 +433,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 111\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, and the disturbance of drowsiness doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p111}
 
-#### 5. Excessive Diligence
+##### 5. Excessive Diligence
 
 112\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p112}
@@ -445,7 +447,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 115\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, and the disturbance of excessive diligence doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p115}
 
-#### 6. Excessive Indolence
+##### 6. Excessive Indolence
 
 116\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p116}
@@ -459,7 +461,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 119\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, the disturbance of excessive diligence doesn’t arise, and the disturbance of excessive indolence doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p119}
 
-#### 7. Fear
+##### 7. Fear
 
 120\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p120}
@@ -473,7 +475,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 123\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, the disturbance of excessive diligence doesn’t arise, the disturbance of excessive indolence doesn’t arise, and the disturbance of fear doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p123}
 
-#### 8. Elation
+##### 8. Elation
 
 124\. “Aniruddha, I again had [538a] the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p124}
@@ -487,7 +489,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 127\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, the disturbance of excessive diligence doesn’t arise, the disturbance of excessive indolence doesn’t arise, the disturbance of fear doesn’t arise, and the disturbance of elation doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p127}
 
-#### 9. Self-Conceited Thoughts
+##### 9. Self-Conceited Thoughts
 
 128\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p128}
@@ -498,7 +500,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 130\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, the disturbance of excessive diligence doesn’t arise, the disturbance of excessive indolence doesn’t arise, the disturbance of fear doesn’t arise, the disturbance of elation doesn’t arise, and the disturbance of self-conceited thoughts doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily [538b] apprehended light and saw forms. That vision of forms and light soon disappeared again.
 {: #p130}
 
-#### 10. Numerous Perceptions
+##### 10. Numerous Perceptions
 
 131\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p131}
@@ -509,7 +511,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 133\. “Aniruddha, now I necessarily think, ‘In my mind, the disturbance of doubt doesn’t arise, the disturbance of unmindfulness doesn’t arise, the disturbance of perceiving physical illness doesn’t arise, the disturbance of drowsiness doesn’t arise, the disturbance of excessive diligence doesn’t arise, the disturbance of excessive indolence doesn’t arise, the disturbance of fear doesn’t arise, the disturbance of elation doesn’t arise, the disturbance of self-conceited thoughts doesn’t arise, and the disturbance of numerous perceptions doesn’t arise.’ Aniruddha, wanting to not produce these disturbances, I lived alone far away from them, my mind was without carelessness, and I cultivated diligence. As a result of living alone far away from them, my mind being without carelessness, and cultivating diligence, I readily apprehended light and saw forms, but that vision of forms and light soon disappeared again.
 {: #p133}
 
-#### 11. Not Observing Forms
+##### 11. Not Observing Forms
 
 134\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
 {: #p134}
@@ -523,8 +525,8 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 137\. “Aniruddha, if my mind gave rise to the disturbance of doubt, my mind was purified of that. Regarding the disturbances of unmindfulness, [538c] perceiving physical illness, drowsiness, excessive diligence, excessive indolence, fear, elation, conceited thoughts, numerous perceptions, and not observing forms, my mind was purified of them.
 {: #p137}
 
-### The Three Concentrations
-#### 1. Concentration with Perception and Contemplation
+##### The Three Concentrations
+###### 1. Concentration with Perception and Contemplation
 
 138\. “Aniruddha, I again thought, ‘I will cultivate three concentrations: I’ll cultivate the concentration with perception and contemplation, cultivate the concentration with no perception and some contemplation, and cultivate the concentration without perception or contemplation.’
 {: #p138}
@@ -541,7 +543,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 142\. “Aniruddha, after knowing it thus, I cultivated the concentration with perception and contemplation all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 {: #p142}
 
-#### 2. Concentration with No Perception and Some Contemplation
+###### 2. Concentration with No Perception and Some Contemplation
 
 143\. “Aniruddha if I cultivated the concentration with no perception and some contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 {: #p143}
@@ -555,7 +557,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 146\. “Aniruddha, after knowing it thus, I cultivated the concentration with no perception and some contemplation all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 {: #p146}
 
-#### 3. Concentration Without Perception or Contemplation
+###### 3. Concentration Without Perception or Contemplation
 
 147\. “Aniruddha, if I cultivated the concentration without perception or contemplation, my mind would be liable to turn to the concentration with perception and contemplation. Thus, I surely wouldn’t lose this knowledge and vision.
 {: #p147}
@@ -569,7 +571,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 150\. “Aniruddha, after knowing it thus, I cultivated concentration without perception or contemplation all day, all night, and [539a] all day and night. Aniruddha, at that point I practiced in this way.
 {: #p150}
 
-### The Signs of Light and Forms
+##### The Signs of Light and Forms
 
 151\. “Aniruddha, there was a time I perceived light but didn’t see forms. Aniruddha, I thought, ‘What’s the cause and what’s the condition for perceiving light but not seeing forms?’
 {: #p151}
@@ -595,7 +597,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 158\. “Aniruddha, I again thought, ‘If I enter concentration extensively, then because of entering concentration extensively, my vision is extensively purified. Because my vision is extensively purified, then I perceive extensive light and see extensive forms.’ Aniruddha, knowing it thus, I perceived extensive light and saw extensive forms all day, all night, and all day and night. Aniruddha, at that point I practiced in this way.
 {: #p158}
 
-### Conclusion
+#### Conclusion
 
 159\. “Aniruddha, if the disturbance of doubt arose in my mind, my mind was purified of that. [If] the disturbances of unmindfulness, perceiving physical illness, drowsiness, excessive diligence, [539b] excessive indolence, fear, elation, conceited thoughts, the arising of numerous perceptions, and the thought of not observing forms [arose in my mind], my mind was purified of them. I fully cultivated the concentration with perception and contemplation, fully cultivated the concentration with no perception and some contemplation, and fully cultivated the concentration without perception or contemplation. I fully cultivated one-pointed concentration, fully cultivated mixed concentration, fully cultivated a little concentration, and fully cultivated extensive and measureless concentration.
 {: #p159}
@@ -609,7 +611,8 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 5 March 2020
+{: .revised}
 
 ---
