--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
@@ -91,7 +91,8 @@ next: MA_074.html
 ---
 
 Translator: Charles Patton
-
-Last Revised:5 March 2020
+{: .translator}
+Last Revised: 5 March 2020
+{: .revised}
 
 ---
