--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
@@ -100,7 +100,8 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 4 March 2020
+{: .revised}
 
 ---
