--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
@@ -8,7 +8,7 @@ previous: MA_076.html
 
 # [The Medium Discourses](../../index.html)
 ## [Chapter 7: King Dīrghāyu](index.html)
-### 77. The Three Clansmen of Saketa
+### 77. The Three Clansmen of Sāketa
 
 1\. Thus I have heard: One time, the Buddha traveled to Sāketa and stayed in the Green Grove.
 {: #p1}
@@ -39,7 +39,7 @@ Venerable Aniruddha said, “So it is, Bhagavān. We are happy with this right D
 
 He replied, “So it is.”
 
-### The Basis of Good Qualities
+#### The Basis of Good Qualities
 
 8\. “Aniruddha, if clansmen leave home to train on the path with of such a thought, how will they know the basis of attaining measureless good qualities?”
 Venerable Aniruddha said to the Bhagavān, “The Bhagavān is the basis of the Dharma! The Bhagavān is the Dharma lord! The Dharma comes from the Bhagavān! Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
@@ -56,7 +56,7 @@ Aniruddha and the others accepting the teaching and listened.
 11\. “If they seclude themselves from desires and aren’t fettered by bad qualities, they’ll surely attain the abandoning of pleasures and unsurpassed calm. Their minds won’t become obsessed, angry, or drowsy. Their minds won’t become unhappy, their bodies won’t be stretched, they won’t eat often, and their minds won’t be sad. Those monks then can tolerate hunger and thirst, cold and hot [weather], biting and stinging insects, being troubled by wind and sun, harsh noises,  and being caned. They’re able to tolerate it when they encounter illnesses, extreme pain, and when their life is about to end. All these unpleasant things are bearable. What is the reason for that? They aren’t covered by desire or fettered by bad qualities. They also attain the abandoning of pleasures and unsurpassed calm.”
 {: #p11}
 
-### The Purpose of Removing the Contaminants
+#### The Purpose of Removing the Contaminants
 
 12\. The Bhagavan asked, “Aniruddha, what was the Tathāgata’s purpose? Was there something to remove, something to use, something to bear, something to stop, or something to reject?”
 {: #p12}
@@ -74,7 +74,7 @@ Aniruddha and the other accepted the teaching and listened.
 15\. “Aniruddha, to the Tathāgata, it’s simply because of this body, because of the six bases, and because of this life span that there’s something to remove, something to use, something to bear, something to stop, and something to reject. Aniruddha, this was the Tathāgata’s purpose. There was something to remove, something to use, something to bear, something to stop, and something to reject.”
 {: #p15}
 
-### The Purpose of Living in Seclusion
+#### The Purpose of Living in Seclusion
 
 16\. The Bhagavān asked, “Aniruddha, what was the Tathāgata’s purpose? Why did he stay in an undisturbed place under a mountain forest tree or live happily in a grotto where it’s peaceful, without voices, secluded, without bad things, uninhabited, and in accord with sitting in repose?”
 {: #p16}
@@ -98,8 +98,8 @@ Aniruddha and the other accepted the teaching and listened.
 21\. “Aniruddha, it was for this purpose that the Tathāgata stayed in a undisturbed place under a mountain forest tree or lived happily in a grotto where it was peaceful, without voices, secluded, without bad things, uninhabited, and in accord with sitting in repose.”
 {: #p21}
 
-### The Purpose of Relating the Rebirth of Disciples
-#### 1. Monks
+#### The Purpose of Relating the Rebirth of Disciples
+##### 1. Monks
 
 22\. The Bhagavān asked, “Aniruddha, what’s the Tathāgata’s purpose when he relates that a disciple whose life ended had ‘a certain birth in a certain place, a certain birth in a certain place’?”
 {: #p22}
@@ -136,7 +136,7 @@ Aniruddha and the other accepted the teaching and listened.
 
 “Having heard those people, he remembers: ‘That venerable was faithful, observed the precepts, broadly learned, generous, and wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that [venerable] so-and-so. Aniruddha, such a monk surely will attain a distinct abode of well-being.
 
-#### 2. Nuns
+##### 2. Nuns
 
 30\. “Aniruddha, suppose that a nun hears: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had attain the ultimate knowledge: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” She was no longer subject to existence and knew it as it really was.’ She may have met that venerable personally, or she might have heard from numerous people: ‘That nun thus is faithful, thus observes the precepts, thus is broadly learned, thus generous, and thus wise.’
 {: #p30}
@@ -158,7 +158,7 @@ Aniruddha and the other accepted the teaching and listened.
 
 “Having heard those people, she remembers: ‘That nun was faithful, observed the precepts, broadly learned, generous, and wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that [nun] so-and-so. Aniruddha, such a nun surely will attain a distinct abode of well-being.
 
-#### 3. Layman
+##### 3. Laymen
 
 34\. “Aniruddha, suppose a layman hears: ‘A certain layman’s life has ended at some location, and the Buddha has related that he had ended the five lower bonds, was born elsewhere, and attained parinirvāṇa. Having attained irreversibility, he will not return to this world.’ He may have met that layman personally, or he might have heard from numerous people: ‘That layman thus is faithful, thus observes the precepts, thus is broadly learned, thus generous, and thus wise.’
 {: #p34}
@@ -175,7 +175,7 @@ Aniruddha and the other accepted the teaching and listened.
 
 “Having heard those people, he remembers: ‘That layman was faithful, observed the precepts, broadly learned, generous, and wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that [layman] so-and-so. Aniruddha, such a layman surely will attain a distinct abode of well-being.
 
-#### 4. Laywomen
+##### 4. Laywomen
 
 37\. “Aniruddha, suppose a laywoman hears: ‘A certain laywoman’s life has ended at some location, and the Buddha has related that she had ended the five lower bonds, was born elsewhere, and attained parinirvāṇa. Having attained irreversibility, she will not return to this world.’ She may have met that laywoman personally, or she might have heard from numerous people: ‘That laywoman thus is faithful, thus observes the precepts, thus is broadly learned, thus generous, and thus wise.’
 {: #p37}
@@ -202,7 +202,7 @@ Aniruddha and the other accepted the teaching and listened.
 ---
 
 Translator: Charles Patton
-
+{: .translator}
 Last Revised: 30 March 2020
-
+{: .revised}
 ---
