--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -33,7 +33,7 @@ next: MA_003.html
 7\. “Furthermore, once the [buds] of Trāyastriṃśa Heaven’s pārijāta tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the pārijāta tree will be in full bloom.
 {: #p7}
 
-8\. “Once the pārijāta tree has fully bloomed, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[5\]](#n5){:#ref5} During the fourth month of summer, the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
+8\. “Once the pārijāta tree has fully bloomed, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[5\]](#n5){:#ref5} During the fourth month of summer,[\[6\]](#n8){: #ref8} the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
 {: #p8}
 
 #### The Seasons of the Noble Disciple
@@ -44,13 +44,13 @@ next: MA_003.html
 10\. “Furthermore, when he shaves off his beard and hair, puts on reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path, the noble disciple then is called ‘falling leaves.’ He’s like the leaves falling from the Trāyastriṃśa Heaven’s pārijāta tree.
 {: #p10}
 
-11\. “Furthermore, he parts with desire and parts with bad and unwholesome things.[\[6\]](#n6){:#ref6} With perception and contemplation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back.’ He’s like the leaves growing back on the Trāyastriṃśa Heaven’s pārijāta tree.
+11\. “Furthermore, he parts with desire and parts with bad and unwholesome things.[\[7\]](#n6){:#ref6} With perception and contemplation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back.’ He’s like the leaves growing back on the Trāyastriṃśa Heaven’s pārijāta tree.
 {: #p11}
 
 12\. “Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 {: #p12}
 
-13\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[7\]](#n7){:#ref7} He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
+13\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[8\]](#n7){:#ref7} He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 {: #p13}
 
 14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds] becoming like bowls.
@@ -78,7 +78,7 @@ next: MA_003.html
 3. {:#n3} Pali: *Na cirass’eva dāni jālakajāto bhavissati*. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#ref3)
 4. {:#n4} Pali: *Na cirass’eva dani kharakajato bhavissati*. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means "bird's beak;" presumably, it refers to the shape of the buds as they develop. [\[back\]](#ref4)
 5. {:#n5} *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana range from 7 to 9 miles. [\[back\]](#ref5)
-6. {:#n8} *fourth month of summer*. This would be the month of Skt. Āṣāḍha on the Indian lunar calendar, which coincides with late June/early July on the Gregorian calendar. The rainy season retreat began during this month among Buddhists and other wandering ascetics, and Āṣāḍha was a time of seasonal festivals and religious observances across ancient India.
+6. {:#n8} *fourth month of summer*. This would be the month of Skt. Āṣāḍha on the Indian lunar calendar, which coincides with late June/early July on the Gregorian calendar. The rainy season retreat began during this month among Buddhists and other wandering ascetics, and Āṣāḍha was a time of seasonal festivals and religious observances across ancient India.[\[back\]](#ref8)
 7. {:#n6} *bad and unwholesome things*. Elsewhere in MĀ, this general expression is glossed as a catchall for the three poisons and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. [\[back\]](#ref6)
 8. {:#n7} *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is the reading that I’ve followed. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#ref7)
 
